--- a/src/app/post-page/post-page.component.html
+++ b/src/app/post-page/post-page.component.html
@@ -1,1 +1,16 @@
-<p>post-page works!</p>
+<div class="post">
+  <div class="header">
+    <h1>Post title</h1>
+    <button routerLink="/" class="btn btn-link">Home page</button>
+  </div>
+  <div class="info">
+    <strong>Author is here</strong>
+    <small>12.09.2019</small>
+  </div>
+  <div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur beatae, debitis deleniti doloremque excepturi inventore iste itaque minus, mollitia necessitatibus officiis optio possimus quae quam qui rerum velit voluptatum. Ad delectus dolore dolorem dolores error eveniet, fugit harum inventore, ipsam minus neque nostrum officia sed tenetur unde vitae voluptatibus. Repellat?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur beatae, debitis deleniti doloremque excepturi inventore iste itaque minus, mollitia necessitatibus officiis optio possimus quae quam qui rerum velit voluptatum. Ad delectus dolore dolorem dolores error eveniet, fugit harum inventore, ipsam minus neque nostrum officia sed tenetur unde vitae voluptatibus. Repellat?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur beatae, debitis deleniti doloremque excepturi inventore iste itaque minus, mollitia necessitatibus officiis optio possimus quae quam qui rerum velit voluptatum. Ad delectus dolore dolorem dolores error eveniet, fugit harum inventore, ipsam minus neque nostrum officia sed tenetur unde vitae voluptatibus. Repellat?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur beatae, debitis deleniti doloremque excepturi inventore iste itaque minus, mollitia necessitatibus officiis optio possimus quae quam qui rerum velit voluptatum. Ad delectus dolore dolorem dolores error eveniet, fugit harum inventore, ipsam minus neque nostrum officia sed tenetur unde vitae voluptatibus. Repellat?</p>
+  </div>
+</div>
