--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,24 +1,45 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()">
   <h2>Log in as admin</h2>
 
-  <div class="form-control">
+  <div
+    class="form-control"
+    [ngClass]="{invalid: form.get('email').invalid && form.get('email').touched}"
+  >
     <label for="email">Email:</label>
     <input id="email" type="email" formControlName="email">
 
-    <div class="validation">
-      <small>
-        error
+    <div
+      class="validation"
+      *ngIf="form.get('email').invalid && form.get('email').touched"
+    >
+      <small *ngIf="form.get('email').errors.required">
+        Enter your email
+      </small>
+      <small *ngIf="form.get('email').errors.email">
+        Enter your email correctly
       </small>
     </div>
   </div>
 
-  <div class="form-control">
+  <div
+    class="form-control"
+    [ngClass]="{invalid: form.get('password').invalid && form.get('password').touched}"
+  >
     <label for="password">Password:</label>
     <input id="password" type="password" formControlName="password">
 
-    <div class="validation">
-      <small>
-        error
+    <div
+      class="validation"
+      *ngIf="form.get('password').invalid && form.get('password').touched"
+    >
+      <small *ngIf="form.get('password').errors.required">
+        Enter password
+      </small>
+      <small *ngIf="form.get('password').errors.minlength">
+        Password needs
+        {{form.get('password').errors.minlength.requiredLength}}
+        Now it's
+        {{form.get('password').errors.minlength.actualLength}}
       </small>
     </div>
   </div>
