--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -1,6 +1,10 @@
 <form class="card" [formGroup]="form" (ngSubmit)="submit()">
   <h2>Log in as admin</h2>
 
+  <div class="alert alert-danger" *ngIf="auth.error$ | async as error">
+    {{error}}
+  </div>
+
   <div
     class="form-control"
     [ngClass]="{invalid: form.get('email').invalid && form.get('email').touched}"
@@ -47,6 +51,6 @@
   <button
     class="btn btn-primary"
     type="submit"
-    [disabled]="form.invalid"
+    [disabled]="form.invalid || submitted"
   >Enter</button>
 </form>
