finished the markup of the dashboard-page component

--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -9,18 +9,22 @@
         <th>Author</th>
         <th>Title</th>
         <th>Date</th>
-        <th>
+        <th>Act</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let post of posts; let idx = index">
+        <td>{{idx + 1}}</td>
+        <td>{{post.author}}</td>
+        <td>{{post.title}}</td>
+        <td>{{post.date | date: 'middle'}}</td>
+        <td>
           <button
             class="btn btn-link open"
             [routerLink]="['/admin', 'post', post.id, 'edit']"
           >Open</button>
           <a (click)="remove(post.id)">Remove</a>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td></td>
+        </td>
       </tr>
     </tbody>
   </table>
