--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -17,7 +17,7 @@
         <td>{{idx + 1}}</td>
         <td>{{post.author}}</td>
         <td>{{post.title}}</td>
-        <td>{{post.date | date: 'middle'}}</td>
+        <td>{{post.date | date:'medium'}}</td>
         <td>
           <button
             class="btn btn-link open"
