--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
   --success-color: #28a745;
+  --warning-color: #e1f108;
 }
 
 * {
@@ -185,6 +186,14 @@ img {
 .badge-success,
 .alert-success {
   background: var(--success-color);
+  color: #fff;
+}
+
+.btn-warning,
+.bg-warning,
+.badge-warning,
+.alert-warning {
+  background: var(--warning-color);
   color: #fff;
 }
 
